K8S/platforms-depl.yaml
#API Version name 
apiVersion: apps/v1
#What purpose to create pipeline
kind: Deployment
#Information Regarding Pipeline and here name is our metadata
metadata:
  name: platforms-depl
#Specification
spec:
  #replicas: Here should be 1 replica
  replicas: 1
  #selector is like what name of pod will be run and we are giving the same in template in lable 
  #so from lable it will check and take it 
  selector:
    #Define lablename 
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    #template specification, Here we have containers and when we start key name from (-) so it is an array in pipeline
    spec:
      containers:
        - name: platformservice
          image: lavesh15/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: platformgrpc
    protocol: TCP
    port: 666
    targetPort: 666
